--- a/SlackClone/Base.lproj/Main.storyboard
+++ b/SlackClone/Base.lproj/Main.storyboard
@@ -7,6 +7,7 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -49,7 +50,7 @@
                                         <state key="normal" image="smackBurger"/>
                                     </button>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="# general" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TxN-Cq-PvO">
-                                        <rect key="frame" x="139.66666666666666" y="41.666666666666664" width="97" height="26.999999999999993"/>
+                                        <rect key="frame" x="139" y="41.666666666666664" width="97" height="26.999999999999993"/>
                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="22"/>
                                         <color key="textColor" red="0.99989169840000003" green="1" blue="0.99988096950000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
@@ -92,15 +93,83 @@
                                     <action selector="sendBtnTapped:" destination="PMC-Q5-29N" eventType="touchUpInside" id="HtW-Bd-r52"/>
                                 </connections>
                             </button>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="110" estimatedRowHeight="110" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="5rx-4b-INd">
+                                <rect key="frame" x="0.0" y="80" width="375" height="648"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="messageCell" rowHeight="110" id="gky-sC-oYj" customClass="MessageCell" customModule="SlackClone" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="110"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="gky-sC-oYj" id="tgC-mV-DhP">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="110"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Akil Kumar" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Q3G-fm-62B">
+                                                    <rect key="frame" x="120" y="5" width="80" height="18"/>
+                                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="12:03 pm" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6fC-4h-J7L">
+                                                    <rect key="frame" x="273" y="5" width="57" height="16"/>
+                                                    <fontDescription key="fontDescription" type="italicSystem" pointSize="13"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="profileDefault" translatesAutoresizingMaskIntoConstraints="NO" id="FTL-J6-H6L" customClass="RoundedImageView" customModule="SlackClone" customModuleProvider="target">
+                                                    <rect key="frame" x="5" y="5" width="100" height="100"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="100" id="F9y-R8-f2p"/>
+                                                        <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="100" id="GSr-ok-rjr"/>
+                                                        <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="100" id="cB8-2K-gQi"/>
+                                                        <constraint firstAttribute="height" constant="100" id="iMV-5e-0AT"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="This is a simple message" textAlignment="justified" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QGe-9T-00x">
+                                                    <rect key="frame" x="120" y="31" width="253" height="23"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="23" id="3qO-Jh-8Pe"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="trailing" secondItem="6fC-4h-J7L" secondAttribute="trailing" constant="45" id="52h-zy-Eug"/>
+                                                <constraint firstItem="FTL-J6-H6L" firstAttribute="centerY" secondItem="tgC-mV-DhP" secondAttribute="centerY" id="ATV-AJ-c5E"/>
+                                                <constraint firstItem="Q3G-fm-62B" firstAttribute="leading" secondItem="FTL-J6-H6L" secondAttribute="trailing" constant="14.666666666666671" id="HMr-2s-coU"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="QGe-9T-00x" secondAttribute="trailing" constant="-13" id="Mgj-xz-gVP"/>
+                                                <constraint firstItem="QGe-9T-00x" firstAttribute="leading" secondItem="Q3G-fm-62B" secondAttribute="leading" id="NNX-Ss-Vy0"/>
+                                                <constraint firstItem="6fC-4h-J7L" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="Q3G-fm-62B" secondAttribute="trailing" constant="8" symbolic="YES" id="Vv0-u0-f7N"/>
+                                                <constraint firstItem="FTL-J6-H6L" firstAttribute="leading" secondItem="tgC-mV-DhP" secondAttribute="leading" constant="5" id="bFh-tI-AWZ"/>
+                                                <constraint firstItem="Q3G-fm-62B" firstAttribute="top" secondItem="FTL-J6-H6L" secondAttribute="top" id="qBu-9m-fxF"/>
+                                                <constraint firstItem="QGe-9T-00x" firstAttribute="top" secondItem="Q3G-fm-62B" secondAttribute="bottom" constant="8" symbolic="YES" id="yuW-bl-hL6"/>
+                                                <constraint firstItem="6fC-4h-J7L" firstAttribute="top" secondItem="Q3G-fm-62B" secondAttribute="top" id="zbw-ql-XW4"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="messageBodyLbl" destination="QGe-9T-00x" id="WLk-Lu-J2I"/>
+                                            <outlet property="nameLbl" destination="Q3G-fm-62B" id="IBZ-3d-Cbh"/>
+                                            <outlet property="profileImgView" destination="FTL-J6-H6L" id="xK1-e4-KqS"/>
+                                            <outlet property="timeLbl" destination="6fC-4h-J7L" id="7Cv-9q-Ycc"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="zg4-la-QNX" firstAttribute="trailing" secondItem="FbC-KF-n64" secondAttribute="trailing" constant="5" id="34K-Zd-avI"/>
+                            <constraint firstItem="zg4-la-QNX" firstAttribute="trailing" secondItem="5rx-4b-INd" secondAttribute="trailing" id="4wE-0U-yvy"/>
                             <constraint firstItem="3I3-cP-M7d" firstAttribute="bottom" secondItem="zg4-la-QNX" secondAttribute="bottom" id="6sX-av-nsY"/>
                             <constraint firstItem="R5y-sl-lHk" firstAttribute="leading" secondItem="zg4-la-QNX" secondAttribute="leading" id="8bI-PO-8aB"/>
                             <constraint firstItem="zg4-la-QNX" firstAttribute="trailing" secondItem="3I3-cP-M7d" secondAttribute="trailing" id="GdI-PT-FHf"/>
                             <constraint firstItem="R5y-sl-lHk" firstAttribute="trailing" secondItem="zg4-la-QNX" secondAttribute="trailing" id="Pyq-jB-JsZ"/>
+                            <constraint firstItem="5rx-4b-INd" firstAttribute="top" secondItem="R5y-sl-lHk" secondAttribute="bottom" id="UGE-g9-9cB"/>
                             <constraint firstItem="FbC-KF-n64" firstAttribute="centerY" secondItem="3I3-cP-M7d" secondAttribute="centerY" id="e9O-c3-dzs"/>
+                            <constraint firstItem="3I3-cP-M7d" firstAttribute="top" secondItem="5rx-4b-INd" secondAttribute="bottom" constant="10" id="ntv-vP-Qtp"/>
+                            <constraint firstItem="5rx-4b-INd" firstAttribute="leading" secondItem="zg4-la-QNX" secondAttribute="leading" id="qSk-TP-eTM"/>
                             <constraint firstItem="R5y-sl-lHk" firstAttribute="top" secondItem="vPZ-19-nLm" secondAttribute="top" id="uhC-iY-iGQ"/>
                             <constraint firstItem="3I3-cP-M7d" firstAttribute="leading" secondItem="zg4-la-QNX" secondAttribute="leading" id="zku-fB-7do"/>
                         </constraints>
@@ -109,6 +178,7 @@
                     <connections>
                         <outlet property="channelNameLbl" destination="TxN-Cq-PvO" id="Jn6-IO-458"/>
                         <outlet property="hamBurgerBtn" destination="I0A-kq-oap" id="z8v-8b-mo5"/>
+                        <outlet property="messageTableView" destination="5rx-4b-INd" id="Z1I-ls-Ln1"/>
                         <outlet property="messageTxtFld" destination="3I3-cP-M7d" id="EfE-CI-udC"/>
                     </connections>
                 </viewController>
